# NodeEditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/nodeeditor/gui/: editor.h
include/nodeeditor/gui/nodesys/: connectionitem.h  nodeitem.h  nodescene.h  nodeview.h  portitem.h
src/: main.cpp
src/gui/: editor.cpp
src/gui/nodesys/: connectionitem.cpp  nodeitem.cpp  nodescene.cpp  nodeview.cpp  portitem.cpp
